# badcat

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-tor-windows  build.rs  config.rs.template  rev.c  rust_hs.patch  settings.json  torrc
attacker/: Cargo.toml
attacker/src/: main.rs  setting.rs
docs/: Pupy.md  Tor.md
scripts/: build-tor
src/: cmem.rs  config.rs  fs.rs  http.rs  io.rs  lib.rs  main.rs  mod.rs  secrets.rs  setting.rs  xor.rs
test-pupy/: Cargo.toml
test-pupy/src/: lib.rs
test-tor/: Cargo.toml
test-tor/src/: main.rs
tor/: Cargo.toml  build.rs
tor/src/: lib.rs  main.rs  stream.rs  tor.rs
victim/: Cargo.toml  build.rs  config.rs.template  settings.json  settings.json.example  torrc
victim/src/: main.rs  mod.rs  payload.rs  setting.rs
