[package]
name = "badcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.3.0"
base64 = "0.13.0"
rand = "0.8.0"
tempfile = "3.2.0"
zip = "0.5"
dirs = "4.0.0"

[build-dependencies]
base64 = "0.13.0"
json = "0.11.0"
rand = "0.8.0"
