[package]
name = "badcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["victim", "attacker", "tor", "test-tor", "test-pupy"]

[lib]
name = "badcat_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.13.0"
rand = "0.8.0"
