[package]
name = "attacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.11.0"
fast-socks5 = "0.5.0"
clap = { version = "2.3.0", default-features = false }
tokio = { version = "1.14.0", features = ["net", "io-std", "rt", "macros", "rt-multi-thread"] }
