[package]
name = "attacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
badcat = { path = "../" }
json = "0.11.0"
socks = "0.3.3"
clap = { version = "2.3.0", default-features = false }
dialoguer = { version = "0.9.0", default-features = false }
